--- a/css/style.css
+++ b/css/style.css
@@ -1,216 +1,465 @@
-/* GLOBAL */
-* {
-    font-family: 'Ubuntu', sans-serif;
+/*=============================================
+GLOBAL
+=============================================*/
+*{
+	font-family: 'Ubuntu', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, input, textarea, select, button {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 100;
+h1, h2, h3, h4, h5, h6, input, textarea, select, button{
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
 }
 
-ul, ol {
-    list-style: none;
+ul, ol{
+	list-style: none;
 }
 
-a:visited, a:link, a:focus, a:hover, a:active {
-    list-style: none;
-    text-decoration: none;
+a:visited, a:link, a:focus, a:hover, a:active{
+	list-style: none;
+	text-decoration: none;
 }
 
-/* Encabezado */
-header {
-    position: fixed;
+/*=============================================
+HEADER
+=============================================*/
+
+header{
+	position:fixed;
+	top:0;
+	z-index:3;
+}
+
+header .grid-container{
+	display:grid;
+	grid-template-columns: 3fr 5fr 1fr 1fr 1fr 1fr;
+}
+
+header .grid-item{
+	text-align:center;
+}
+
+header .bloqueReservas{
+	position:relative;
+}
+
+
+header .bloqueReservas .campana-y-reserva{
+	background:#FFFBEE;
+	cursor:pointer;
+}
+
+header .bloqueReservas .fa-concierge-bell{
+	font-size:25px; 
+	color:#847059;
+}
+
+header .bloqueReservas .fa-caret-down, header .bloqueReservas .fa-caret-up{
+	font-size:25px; 
+	color:#236AA1;
+}
+
+header .formReservas{
+	position: absolute;
+    top: 52px;
+    width: 350px;
+    height: auto;
+    left:0px;
     z-index: 2;
+    background: rgba(0, 83, 147, .8);
 }
 
-header .grid-container {
-    display: grid;
-    grid-template-columns: 2fr 6fr 1fr 1fr 1fr 1fr;
+header .formReservas .input-group-lg input, header .formReservas select{
+	font-size:14px;
 }
 
-header .grid-item {
-    background-color: silver;
-    border: 2px solid white;
-    text-align: center;
-    height: 70px;
+header .formReservas input[type="button"]{
+	background:black;
+	font-size:16px;
 }
 
-/* Banner */
-.banner {
-    background-color: silver;
-    border: 2px solid white;
-    height: 650px;
+header .fa-user{
+	font-size:25px; 
+	color:#DFDAD4;
+	cursor:pointer;
 }
 
-/* PLanes */
-.planes .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+header .idiomas span{
+	cursor:pointer;
 }
 
-.planes .grid-item {
-    background-color: silver;
-    border: 2px solid white;
-    text-align: center;
-    height: 300px;
+header .botonMenu i{
+	font-size:30px; 
+	color:#B5A99B;
+	cursor:pointer;
 }
 
-.planes .grid-item:nth-child(1) {
-    grid-column: 1 / span 3;
+/*=============================================
+MENU
+=============================================*/
+nav.menu{
+	position: fixed;
+	z-index:10;
+	top: 60px;
+	background-color: black;
+	display:none;
 }
 
-.planes .grid-item:nth-child(2) {
-    grid-column: 4 / span 3;
+nav.menu li > .nav-link{
+	transition:.5s all;
 }
 
-.planes .grid-item:nth-child(3) {
-    grid-column: 1 / span 2;
+nav.menu li:hover > .nav-link{
+	background:#197DB1;
+	transition:.5s all;
 }
 
-.planes .grid-item:nth-child(4) {
-    grid-column: 3 / span 2;
+.menuMovil{
+	display:none;
+	position:fixed;
+	background: rgba(0,0,0,.8);
+	width:100%;
+	height:90vh;
+	z-index:2;
+	overflow-x: hidden;  
 }
 
-.planes .grid-item:nth-child(5) {
-    grid-column: 5 / span 2;
+.menuMovil .formReservas input[type="button"]{
+	background:black;
+	font-size:16px;
 }
 
-/* Habitaciones */
-.habitaciones .row div[class*="col"] main {
-    background-color: silver;
-    border: 2px solid white;
-    height: 400px;
+.menuMovil .formReservas{
+	background: rgba(0, 83, 147, .8);
+	position: relative;
+	top:23px;
 }
 
-/* Recorrido por el pueblo */
-.recorridoPueblo .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+.menuMovil .nav{
+	background-color: black !important;
 }
 
-.recorridoPueblo .grid-item {
-    background-color: silver;
-    border: 2px solid white;
-    text-align: center;
+/*=============================================
+BANNER
+=============================================*/
+
+.banner .fade-slider{
+	position:relative;
 }
 
-.recorridoPueblo .grid-item:nth-child(1) {
-    grid-row: 1 / span 1;
-    height: 220px;
+.banner .verMas{
+	position:absolute;
+	width:60px;
+	line-height: 60px;
+  	bottom: 5%;
+    left: 50%;
+    font-size:30px;
+    transform: translate(-50%, 0%);
+    cursor:pointer;
 }
 
-.recorridoPueblo .grid-item:nth-child(2) {
-    grid-row: 2 / span 1;
-    height: 220px;
+/*=============================================
+PLANES
+=============================================*/
+.planes .grid-container{
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-.recorridoPueblo .grid-item:nth-child(3) {
-    grid-row: 1 / span 2;
-    height: 440px;
+.planes .grid-item{
+	position:relative;
+	cursor:pointer;
 }
 
-/* Restaurante */
-.fondoRestaurante {
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    height: 500px;
+.planes .grid-item:nth-child(1){
+	grid-column: 1 / span 3;
 }
 
-.restaurante .grid-container {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+.planes .grid-item:nth-child(2){
+	grid-column: 4 / span 3;
+	height:320px;
+	overflow: hidden;
 }
 
-.restaurante .grid-item {
-    background-color: silver;
-    border: 2px solid white;
-    text-align: center;
+.planes .grid-item:nth-child(3){
+	grid-column: 1 / span 2;
 }
 
-.restaurante .grid-item:nth-child(1) {
-    height: 500px;
+.planes .grid-item:nth-child(4){
+	grid-column: 3 / span 2;
+}
+
+.planes .grid-item:nth-child(5){
+	grid-column: 5 / span 2;
+}
+
+.planes .grid-item figure{
+	position:absolute;
+	bottom:-16px;
+	left:0;
+	width:100%;
+	height:100%;
+	background:rgba(0,0,0,.7);
+	color:white;
+}
+
+.planes .grid-item figure h1{
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform: translate(-50%, -50%);
+	font-size:30px !important;
+}
+
+.planesMovil li{
+	overflow: hidden;
+}
+
+.planesMovil img{
+	width:200% !important;
+}
+
+/*=============================================
+HABITACIONES
+=============================================*/
+
+.habitaciones .row div[class*="col"] figure{
+	position:relative;
+	overflow: hidden;
+}
+
+.habitaciones .row div[class*="col"] figure img{
+	transform: scale(1, 1);
+	transition: 1s all;
+}
+
+.habitaciones .row div[class*="col"] figure img:hover{
+	transform: scale(1.1, 1.1);
+	transition: 1s all;
+}
+
+.habitaciones .row div[class*="col"] figure h1{
+	position:absolute;
+	top:45%;
+	left:50%;
+	transform: translate(-50%, -50%);
+	transition:.3s all;
+}
+
+.habitaciones .row div[class*="col"] figure h1:hover{
+	filter: invert(100%);
+	transition:.3s all;
+}
+
+.habitaciones .row div[class*="col"] figure p{
+	background:black; 
+	color:#aaa;
+	padding-left:0;
+	padding-right:0;
+}
+
+.habitaciones .row div[class*="col"] figure h3{
+	background:#FFD185;
+}
+
+.habitaciones .row div[class*="col"] figure h5{
+	color:#777;
+}
+
+/*=============================================
+RECORRIDO PUEBLO
+=============================================*/
+
+.recorridoPueblo .grid-container{
+	display:grid;
+	grid-template-columns: 1fr 2fr;
+}
+
+.recorridoPueblo .grid-item{
+	text-align:center;
 }
 
 
-.restaurante .grid-item:nth-child(2) {
-    position: relative;
-    z-index: 1;
-    top: -40px;
-    height: 580px;
+.recorridoPueblo .grid-item:nth-child(1){
+	grid-row: 1 / span 1;
 }
 
-.restaurante .carta div[class*="col"] {
-    background-color: silver;
-    border: 2px solid white;
-    text-align: center;
-    height: 200px;
+.recorridoPueblo .grid-item:nth-child(2){
+	grid-row: 2 / span 1;
 }
 
-/* Mapa */
-.mapa {
-    position: relative;
+.recorridoPueblo .grid-item:nth-child(3){
+	grid-row: 1 / span 2;
 }
 
-.mapa .info {
-    position: absolute;
-    width: 400px;
-    right: 10px;
-    top: 10%;
-    background-color: silver;
-    height: 370px;
+/*=============================================
+RESTAURANTE
+=============================================*/
+
+.fondoRestaurante{
+	position:fixed;
+	z-index:-1;
+	top:0;
+	left:0;
+	height:1000px;
+	background-color:white;
+	background-image: url("../img/restaurante.png");
+	background-position: center top;
+	background-repeat: repeat-y;
 }
 
-/* Footr */
-footer .grid-container {
-    display: grid;
-    grid-template-columns: 2fr 4fr 2fr;
+.restaurante .grid-container{
+	display:grid;
+	grid-template-columns: 2fr 1fr;
 }
 
-footer .grid-item {
-    background-color: silver;
-    border: 2px solid white;
-    text-align: center;
-    height: 70px;
+.restaurante .grid-item{
+	text-align:center;
+	color:white;
 }
 
-/* Tablet Vertical (MD 768px hacia abajo) */
-@media (max-width:768px) {
-    header .grid-container {
-        grid-template-columns: 4fr 1fr;
-    }
-
-    /* Banner */
-    .banner {
-        height: 400px;
-    }
-
-    /* PLanes */
-    .planes .grid-container {
-        grid-template-columns: 1fr;
-    }
-
-    .planesMovil .grid-item {
-        background-color: silver;
-        border: 2px solid white;
-        text-align: center;
-        height: 450px;
-    }
-
-    /* Recorrido por el pueblo */
-    .recorridoPueblo .grid-container {
-        grid-template-columns: 1fr;
-    }
-
-    /* Restaurante */
-    .restaurante .grid-container {
-        grid-template-columns: 1fr;
-    }
-
-    /* Contactenos */
-    .contactenos input {
-        width: 100% !important;
-        margin: 10px 0px !important;
-    }
+.restaurante .grid-item:nth-child(2){
+	position:relative; 
+	z-index:1;
+	top:-60px; 
+	height:600px;
+	background:#847059;
 }
+
+
+.restaurante .carta div[class*="col"]{
+	text-align:center;
+}
+
+.restaurante .carta img{
+	border:3px solid white;
+}
+
+.contactenos{
+	position:relative;
+	margin-top:-80px;
+}
+
+/*=============================================
+MAPA
+=============================================*/
+
+.mapa{
+	position:relative;
+}
+
+.mapa .info{
+	color: #8B7556;
+	position:absolute;
+	width:400px;
+	right:10%; 
+	top:10%; 
+	background-color: #FFCC29;
+	height:370px;
+}
+
+.mapa .info h3{
+
+	font-weight: bold;
+}
+
+/*=============================================
+FOOTER
+=============================================*/
+
+footer .grid-container{
+	display:grid;
+	grid-template-columns: 2fr 4fr 2fr;
+}
+
+footer .grid-item{
+	background-color: #197DB1;
+	text-align:center;
+	color:white;
+}
+
+.redesMovil{
+	visibility: hidden;
+	position: fixed;
+	bottom:0px;
+	z-index:2;
+	width:100%;
+	background: #197DB1;
+}
+
+/*=============================================
+SCROLL UP
+=============================================*/
+#scrollUp{
+	bottom: 20px;
+	right: 20px;
+	width: 50px;
+	height: 50px;
+	background: url(../img/flecha.jpg);
+}
+
+
+/*=============================================
+TABLET VERTICAL (MD revisamos en 768px hacia abajo)
+=============================================*/
+
+@media (max-width:768px){
+
+	header .grid-container{
+		grid-template-columns:4fr 1fr;
+	}
+
+	.planes .grid-container{	
+		grid-template-columns: auto;
+	}
+
+	.habitaciones .row div[class*="col"] figure p{
+		padding-left:4px;
+		padding-right:4px;
+	}
+
+	.recorridoPueblo .grid-container{
+		grid-template-columns: 1fr;
+	}
+
+	.recorridoPueblo .grid-container h1{
+		font-size:30px;
+	}
+
+	.restaurante .grid-container{
+		grid-template-columns: 1fr;
+	}
+
+	.restaurante h1{
+		font-size:30px;
+	}
+
+	.restaurante .grid-item:nth-child(2){
+		height:400px;
+		background:rgba(81, 69, 55, .9);
+	}
+
+	.contactenos input{
+		width:100% !important;
+		margin:10px 0px !important;
+	}
+
+	.mapa .info{
+		position:absolute;
+		width:90%;
+		left:50%; 
+		top:100px; 
+		transform: translate(-50%, 0%);
+		background-color: #FFCC29;
+		height:350px;
+	}
+
+	footer .grid-container{
+		grid-template-columns: 1fr;
+	}
+
+	.redesMovil{
+		visibility: visible;
+	}
+
+}
+
